...
    "account.feature-adoption.state.done": {
      "extractionState": "translated",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Выполнено"
...
    "common.ok": {
      "extractionState": "stale",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "OK"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "ОК"
...
    "edit.edit": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Edit"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Изменить"
...
    "edit.ingredient.section": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Ingredient"
          }
        },
        "ru": {
          "stringUnit": {
            "state": "translated",
            "value": "Ингредиент"
          }
        }
      }
    },
    "edit.legacy.banner": {
      "extractionState": "manual",
...
